# CVTrainer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
apps/cifar10_demo/: README.md  __init__.py  dataset.py  model.py  train.yaml
apps/food_classifier/: __init__.py  model.py  train.yaml
configs/common/: tensorizers.yaml  transforms.yaml
cvtrainer/: builder.py  cli.py  context.py  trainer.py
cvtrainer/core/: __init__.py  config.py  stage.py
cvtrainer/ddp/: __init__.py  launcher.py  utils.py
cvtrainer/hooks/: __init__.py  base.py  checkpoint.py  ddp.py  ema.py  logger.py  lr_scheduler.py  progress_bar.py
cvtrainer/logger/: __init__.py  base.py  console.py  file.py  tensorboard.py  wandb.py
cvtrainer/loss/: __init__.py  bce.py  cross_entropy.py
cvtrainer/meters/: __init__.py  accuracy.py  base.py  classification.py  detection.py  loss.py  segmentation.py
cvtrainer/models/: __init__.py  base.py
cvtrainer/models/adapters/: __init__.py  conv.py  identity.py  linear.py
cvtrainer/models/backbones/: __init__.py  resnet.py
cvtrainer/models/heads/: __init__.py  classifier.py
cvtrainer/optim/: optimizer.py  scheduler.py
docs/: README.md  api.md  architecture.md  best_practices.md  changelog.md  contributing.md
tests/: conftest.py  test_meters_detection.py  test_meters_segmentation.py
tests/fixtures/: __init__.py  data_fixtures.py  model_fixtures.py  trainer_fixtures.py
tests/integration/: test_training_loop.py
tests/unit/core/: test_builder.py  test_config.py  test_trainer.py
tests/unit/hooks/: test_base.py  test_logger_hook.py
tests/unit/loss/: test_bce.py  test_cross_entropy.py
tests/unit/meters/: test_meters_classification.py
tests/unit/models/: test_models.py
tests/unit/optim/: test_optimizer.py
